--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello</title>
 </head>
 <body>
-    
+   <strong>Hello, world!</strong>
+   <!-- test image -->
+   <img src="images/screenshot 2016-09-17 01.bmp" alt="test picture">
 </body>
 </html>
