Stock widget test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
    <strong>Hello, world!</strong>
-   <!-- test image -->
-   <img src="images/screenshot 2016-09-17 01.bmp" alt="test picture">
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/LSE-PAG/technicals/" rel="noopener" target="_blank"><span class="blue-text">Technical Analysis for PAG</span></a> by TradingView</div>
+    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
+    {
+    "interval": "1m",
+    "width": 425,
+    "isTransparent": true,
+    "height": 450,
+    "symbol": "LSE:PAG",
+    "showIntervalTabs": true,
+    "locale": "en",
+    "colorTheme": "dark"
+  }
+    </script>
+  </div>
+  <!-- TradingView Widget END -->
 </body>
 </html>
