--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
 </head>
 <body>
    <strong>Hello, world!</strong>
-<!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-    <div class="tradingview-widget-container__widget"></div>
-    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/LSE-PAG/technicals/" rel="noopener" target="_blank"><span class="blue-text">Technical Analysis for PAG</span></a> by TradingView</div>
-    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
-    {
-    "interval": "1m",
-    "width": 425,
-    "isTransparent": true,
-    "height": 450,
-    "symbol": "LSE:PAG",
-    "showIntervalTabs": true,
-    "locale": "en",
-    "colorTheme": "dark"
-  }
-    </script>
-  </div>
-  <!-- TradingView Widget END -->
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/dX-mJStdQrM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
