color and CSS button test

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <strong>Hello, world!</strong>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/dX-mJStdQrM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <button>Button 3</button>
 </body>
 </html>
